# work-support

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.omx/: metrics.json
.omx/context/: ralph-seed-display-20260601T063319Z.md  team-ui-polish-20260601T065814Z.md  ui-qa-cleanup-20260601T055534Z.md  work-support-mvp-audit-20260601T014438Z.md  work-support-mvp-stack-20260531T235044Z.md  work-support-ops-plan-20260601T022934Z.md  work-support-platform-20260531T234817Z.md  work-support-pm-roadmap-20260601T025523Z.md
.omx/logs/: notify-hook-2026-06-01.jsonl  team-delivery-2026-06-01.jsonl  tmux-hook-2026-06-01.jsonl  turns-2026-06-01.jsonl
.omx/plans/: open-questions.md  (+13 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: career_assets.py  errors.py  health.py  outcomes.py  projects.py  reports.py  security.py  work_logs.py
backend/app/core/: config.py
backend/app/db/: connection.py  schema.py
backend/app/schemas/: career_assets.py  outcomes.py  projects.py  reports.py
backend/app/services/: __init__.py  auto_report.py  career_assets.py  outcomes.py  projects.py  storage.py  weekly_report.py  work_logs.py
backend/scripts/: init_db.py  seed_local.py
backend/tests/: test_career_assets_api.py  test_db_schema.py  test_health.py  test_projects_api.py  test_seed_local.py  test_stabilization_scope.py  test_weekly_report.py  test_work_logs_api.py
docs/: DESIGN_SYSTEM.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
(+50 files in other folders)
