[project]
name = "work-support-backend"
version = "0.1.0"
description = "FastAPI skeleton for the work-support MVP."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.48.0",
  "pydantic-settings==2.14.1",
  "psycopg[binary]==3.3.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
